--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,7 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
+  {% if site.facebook_comments == true %}
+    {% include facebook_comments.html %}
   {% endif %}
 </article>
