--- a/_includes/facebook_comments.html
+++ b/_includes/facebook_comments.html
@@ -6,5 +6,4 @@
   js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.12';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
-<div class="fb-comments" data-href="https://min9nim.github.io/" data-width="740" data-numposts="10"></div>
+<div class="fb-comments" data-href="{{ page.url | absolute_url }}" data-width="740" data-numposts="10"></div>
