--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
+    <h2 class="footer-heading"><a href="/">{{ site.title | escape }}</a></h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
@@ -28,11 +28,30 @@
           </li>
           {% endif %}
 
+          {% if site.facebook_username %}
+          <li>
+            {% include icon-facebook.html username=site.facebook_username %}
+          </li>
+          {% endif %}
+
+          {% if site.tistory_username %}
+          <li>
+            {% include icon-tistory.html username=site.tistory_username %}
+          </li>
+          {% endif %}
+
           {% if site.twitter_username %}
           <li>
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          {% if site.twitter_username2 %}
+          <li>
+            {% include icon-twitter.html username=site.twitter_username2 %}
+          </li>
+          {% endif %}
+
         </ul>
       </div>
 
