--- a/_includes/facebook_comments.html
+++ b/_includes/facebook_comments.html
@@ -6,4 +6,4 @@
   js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.12';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-comments" data-href="https://min9nim.github.io{{ page.url | absolute_url | remove: "http://localhost:4000" }}" data-width="740" data-numposts="10"></div>
+<div class="fb-comments" data-href="https://min9nim.github.io{{ page.url | absolute_url | remove: "http://localhost:4000" }}" data-width="100%" data-numposts="10"></div>
