--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading"><a href="/">{{ site.title | escape }}</a></h2>
+    <h2 class="footer-heading"><a href="{{site.paginate_path | prepend: site.baseurl | replace: '/:num', ''}}">{{ site.title | escape }}</a></h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
