--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: min
 ---
 
 <div class="home">
@@ -7,6 +8,7 @@ layout: default
   <h1 class="page-heading">Posts</h1>
 
   {{ content }}
+
 
   <ul class="post-list">
     {% for post in site.posts %}
@@ -22,7 +24,7 @@ layout: default
       </li>
     {% endfor %}
   </ul>
-
+<!--
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+-->
 </div>
