--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -47,3 +47,7 @@ $on-laptop:        800px !default;
   "minima/layout",
   "minima/syntax-highlighting"
 ;
+
+.post-categories {
+  margin-right: 20px;
+}
