테마변경 minima => whiteglass

--- a/_sass/whiteglass.scss
+++ b/_sass/whiteglass.scss
@@ -1,8 +1,6 @@
-@charset "utf-8";
-
 // Define defaults for each variable.
-
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-family: Bitter, "Apple SD Gothic Neo", "Noto Sans", "Source Han Sans", "Noto Sans CJK JP", "Source Han Sans JP", "Noto Sans CJK KR", "Source Han Sans KR", NanumBarunGothic, AppleGothic, "Malgun Gothic", Dotum, sans-serif !default;
+$monospace-font-family: Monaco, Menlo, Consolas, "Courier New", DotumChe, monospace !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
@@ -12,7 +10,7 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$brand-color:      #2568ba !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
@@ -21,8 +19,10 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 // Width of the content area
 $content-width:    800px !default;
 
-$on-palm:          300px !default;
+$on-palm:          600px !default;
 $on-laptop:        800px !default;
+
+
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -37,17 +37,16 @@ $on-laptop:        800px !default;
   }
 }
 
+// 푸터 커스터마이징 18-07-28
 @mixin relative-font-size($ratio) {
   font-size: $base-font-size * $ratio;
 }
 
+
+
 // Import partials.
 @import
-  "minima/base",
-  "minima/layout",
-  "minima/syntax-highlighting"
+  "whiteglass/base",
+  "whiteglass/layout",
+  "whiteglass/syntax-highlighting"
 ;
-
-.post-categories {
-  margin-right: 20px;
-}
