--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,63 +2,9 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading"><a href="{{site.paginate_path | prepend: site.baseurl | replace: '/:num', ''}}">{{ site.title | escape }}</a></h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>
-            {% if site.author %}
-              {{ site.author | escape }}
-            {% else %}
-              {{ site.title | escape }}
-            {% endif %}
-            </li>
-            {% if site.email %}
-            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.facebook_username %}
-          <li>
-            {% include icon-facebook.html username=site.facebook_username %}
-          </li>
-          {% endif %}
-
-          {% if site.tistory_username %}
-          <li>
-            {% include icon-tistory.html username=site.tistory_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username2 %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username2 %}
-          </li>
-          {% endif %}
-
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
-      </div>
-    </div>
+    <p>
+      {% include footer_content.html %}
+    </p>
 
   </div>
 
