--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
     {{ content }}
   </div>
 
-  {% if site.disqus.comments == true and jekyll.environment == "production" %}
+  {% if true or site.disqus.comments == true and jekyll.environment == "production" %}
     <div class="post-comments" itemprop="comment">
       {% include custom_comments_provider.html %}
     </div>
