--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -3,9 +3,9 @@
   <script>
     var disqus_config = function () {
       //this.page.url = '{{ page.url | absolute_url }}';
-      this.page.url = 'https://min9nim.github.io{{ page.url}}';
+      this.page.url = '{{ site.url | append: page.url}}';
       //this.page.identifier = '{{ page.url | absolute_url }}';
-      this.page.identifier = 'https://min9nim.github.io{{ page.url}}';
+      this.page.identifier = '{{ site.url | append: page.url}}';
     };
 
     (function() {
