--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -7,7 +7,7 @@ layout: default
 
   <div>
       <header class="post-header">
-          <h1 class="page-heading">Category list</h1>
+          <h1 class="page-heading">Items of category</h1>
       </header>
       <div>
           {% for category in site.categories %}
