windows7에서 빌드오류 수정: 한글주석 => 영문주석

--- a/_sass/whiteglass.scss
+++ b/_sass/whiteglass.scss
@@ -37,7 +37,7 @@ $on-laptop:        800px !default;
   }
 }
 
-// 푸터 커스터마이징 18-07-28
+// footer customizing 18-07-28
 @mixin relative-font-size($ratio) {
   font-size: $base-font-size * $ratio;
 }
