--- a/_includes/footer_content.html
+++ b/_includes/footer_content.html
@@ -67,5 +67,5 @@
 {% if site.feed and site.feed.path %}
   {% assign feed_path = site.feed.path %}
 {% endif %}
-&copy; {{ site.author }} - Powered by <a href="https://pages.github.com/">GitHub-Pages</a> &amp; <a href="https://jekyllrb.com">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="{{ feed_path | absolute_url }}">RSS</a>
+&copy; {{ site.author }} - Powered by <a href="https://pages.github.com/">GitHub</a> &amp; <a href="https://jekyllrb.com">Jekyll</a> &amp; <a href="https://github.com/yous/whiteglass">whiteglass</a> - Subscribe via <a href="{{ feed_path | absolute_url }}">RSS</a>
 </div>
