--- a/_includes/tag_cloud.html
+++ b/_includes/tag_cloud.html
@@ -1,22 +1,4 @@
-<style>
-#presets a { border-left: solid #666 1px; padding: 0 10px; }
-#presets a.first { border-left: none; }
-#keyword { width: 300px; }
-#fetcher { width: 500px; }
-#keyword, #go { font-size: 1.5em; }
-#text { width: 100%; height: 100px; }
-p.copy { font-size: small; }
-#form { font-size: small; position: relative; }
-hr { border: none; border-bottom: solid #ccc 1px; }
-a.active { text-decoration: none; color: #000; font-weight: bold; cursor: text; }
-#angles line, #angles path, #angles circle { stroke: #666; }
-#angles text { fill: #333; }
-#angles path.drag { fill: #666; cursor: move; }
-#angles { text-align: center; margin: 0 auto; width: 350px; }
-#angles input, #max { width: 42px; }
-</style>
-
-<div id="vis" style="zoom:0.8"></div>
+<div id="vis"></div>
 <form id="form" style="display:none;">
     <p style="position: absolute; right: 0; top: 0" id="status"></p>
 
@@ -35,8 +17,6 @@ a.active { text-decoration: none; color: #000; font-weight: bold; cursor: text; 
             {% endfor %}
             
           {% endfor %}
-      
-
         </textarea>
         <button id="go" type="submit">Go!</button>
       </div>
@@ -79,3 +59,15 @@ a.active { text-decoration: none; color: #000; font-weight: bold; cursor: text; 
 
 <script src="/assets/d3.min.js"></script>
 <script src="/assets/cloud.min.js"></script>
+
+<script>
+// tag-cloud 크기를 스크린 사이즈에 따라 보정 18.08.11
+function resizeTagCloud(){
+  console.log()
+  if(document.body.offsetWidth < 800){
+    document.getElementById("vis").style.zoom = 0.8 * (document.body.offsetWidth/800)
+  }
+}
+window.onresize = resizeTagCloud;
+window.onload = resizeTagCloud;
+</script>
