--- a/_layouts/tag_archives.html
+++ b/_layouts/tag_archives.html
@@ -42,10 +42,9 @@ layout: default
         </div>    
     </div>
   
-    {% if site.comments == true and page.comments != false %}
-      <div class="post-comments">
+    {% if true or site.disqus.comments == true and jekyll.environment == "production" %}
+      <div class="post-comments" itemprop="comment">
         {% include custom_comments_provider.html %}
       </div>
-    {% endif %}
-  
+    {% endif %}    
   </article>
