--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -16,21 +16,21 @@ layout: default
             {%  for tag in site.tags %}
                 <!-- tag_name 변수 지정: 태그명은 소문자화(slugize) 한다 -->
                 {% capture tag_name %}{{tag|first|slugize}}{% endcapture %}
-                <!-- font_size 변수 지정: 태그숫자/전체태그숫자 * 100 + 50 -->
-                {% capture font_size %}{{tag|last|size| times:50 | divided_by:site.tags.size | plus: 14 }}{% endcapture %}
                 <!-- tag_size 변수 지정-->
                 {% capture tag_size %}{{tag|last|size}}{% endcapture %}
+                <!-- font_size 변수 지정: 태그숫자/전체태그숫자 * 100 + 50 -->
+                {% capture font_size %}{{tag_size | times: site.tags.size | divided_by:site.tags.size | plus: 14 }}{% endcapture %}
 
                 <div class="tagname">
-                    <a href="/tags/archives#{{tag_name}}" style="font-size:{{font_size}}px">{{ tag_name }}({{tag_size}})</a>
+                    <a href="/tags/archives#{{tag_name}}" style="font-size:{{font_size}}px">{{ tag_name }}</a>
                 </div>
             {% endfor %}
         </div> 
     </div>
   
-    {% if site.comments == true and page.comments != false %}
-      <div class="post-comments">
-        {% include custom_comments_provider.html %}
-      </div>
-    {% endif %}
-  </article>
+    {% if true or site.disqus.comments == true and jekyll.environment == "production" %}
+    <div class="post-comments" itemprop="comment">
+      {% include custom_comments_provider.html %}
+    </div>
+  {% endif %}
+</article>
