--- a/_includes/tag_cloud.html
+++ b/_includes/tag_cloud.html
@@ -61,9 +61,10 @@
 
 </form>
 
-<script src="/assets/d3.min.js"></script>
-<script src="/assets/cloud.min.js"></script>
-
+<!-- <script src="/assets/d3.min.js"></script> -->
+<script src="https://www.jasondavies.com/d3.min.js"></script>
+<!-- <script src="/assets/cloud.min.js"></script> -->
+<script src="https://www.jasondavies.com/wordcloud/cloud.min.js"></script>
 <script>
 // tag-cloud 크기를 스크린 사이즈에 따라 보정 18.08.11
 function resizeTagCloud(){
