--unsafe-perm=true 형태의 태그도 사용 가능하도록 수정

--- a/_layouts/tag_archives.html
+++ b/_layouts/tag_archives.html
@@ -50,5 +50,5 @@ layout: default
 
 
   <script>
-    document.querySelector(decodeURIComponent(location.hash+"_")).style.display = "block";
+    document.getElementById(decodeURIComponent(location.hash.substr(1)+"_")).style.display = "block";
   </script>
