--- a/_sass/whiteglass/_base.scss
+++ b/_sass/whiteglass/_base.scss
@@ -283,3 +283,18 @@ pre {
   display: block;
   text-align: center;
 }
+
+
+
+/* 18.08.31 markdown table */
+table {
+  border-spacing: 0px;
+  thead {
+    background-color:#f7eef2;
+  }
+  th, td {
+    border-collapse:collapse;
+    border: 1px solid #ddd;  
+    padding: 2px 10px 2px 10px;
+  }
+}
