--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,7 +11,7 @@ $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     20px;    // 목록에서 글제목 간격 수정, 2018-09-04
+$spacing-unit:     20px;    // update margin between title, 2018-09-04
 
 $text-color:       #111;
 $background-color: #fdfdfd;
