new & 글목록에서 제목 폰트크기 조절

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,4 +68,6 @@
 
   {% include fonts.html %}
   {% include google_analytics.html %}
+
+  <!-- <link href="//db.onlinewebfonts.com/c/13b003e481c54fdf324c9ed0d312d49c?family=Colopocle" rel="stylesheet" type="text/css"/> -->
 </head>
